--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,27 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/resultTextView"
+        android:layout_width="306dp"
+        android:layout_height="120dp"
+        android:layout_below="@id/scanButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="72dp"
+        android:background="@drawable/textshape"
+        android:fontFamily="@font/sairasemicondensed_light"
+        android:gravity="center"
+        android:hint="here the text will appear!"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/scanButton"
@@ -27,23 +47,25 @@
         app:layout_constraintTop_toBottomOf="@+id/resultTextView"
         app:layout_constraintVertical_bias="0.164" />
 
-    <TextView
-        android:id="@+id/resultTextView"
-        android:layout_width="306dp"
-        android:layout_height="120dp"
-        android:layout_below="@id/scanButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="232dp"
-        android:background="@drawable/textshape"
-        android:gravity="center"
-        android:hint="here the text will appear!"
-        android:textColor="@color/white"
-        android:textSize="15sp"
-        android:textAllCaps="true"
+    <Button
+        android:id="@+id/fileBtn"
+        android:layout_width="137dp"
+        android:layout_height="48dp"
+        android:background="@drawable/buttonshape"
+        android:fontFamily="@font/sairasemicondensed_light"
+        android:shadowColor="#255F7F"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:visibility="invisible"
+        android:text="View files"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/scanButton"
+        app:layout_constraintVertical_bias="0.164" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
