--- a/app/src/main/res/layout/intro_slide1.xml
+++ b/app/src/main/res/layout/intro_slide1.xml
@@ -25,20 +25,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:layout_width="411dp"
-        android:layout_height="53dp"
+        android:layout_width="315dp"
+        android:layout_height="69dp"
         android:layout_below="@+id/intro_img_1"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="-5dp"
-        android:layout_marginTop="33dp"
-        android:layout_marginBottom="178dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="236dp"
         android:fontFamily="@font/sairasemicondensed_light"
         android:gravity="center"
         android:text="scan your qr code"
         android:textAllCaps="true"
         android:textColor="@color/floral_white"
-        android:textSize="30dp"
+        android:textSize="25sp"
         android:textStyle="bold" />
 
 </RelativeLayout>
